--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,10 +155,12 @@ row {
 
     #crystalImages {
         text-align: center;
+        margin: 60px 0px 0px 0px;
     }
 
     .crystal {
-        margin: 100px 0px 20px 0px;
+        margin: 20px 5px 20px 5px;
+        height: 125px;
     }
 
     row {
