--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,23 @@ body {
     background-color: mediumseagreen;
     color: whitesmoke;
     opacity: .8;
+    display:block;
+}
+
+#btnWrap {
+    text-align: center;
+    background-color: mediumseagreen;
+    opacity: .8;
+}
+
+#instructionButton {
+    background-color: rgb(233, 255, 233);
+    color: darkgreen;
+    border-style: solid;
+    border-color: darkgreen;
+    border-width: 2px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 #winLose {
