new instructions and labels

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 #title {
-    background-color: antiquewhite;
-    color: darkgreen;
+    background-color: rgb(9, 149, 243);
+    color: rgb(228, 244, 250);
     opacity: .8;
 }
 
