--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,17 @@ body {
     opacity: .8;
 }
 
+#instructionButton:hover {
+    border-style: solid;
+    background-color: darkgreen;
+    color: rgb(233, 255, 233);
+    border-color: rgb(233, 255, 233);
+}
+
+#instructionButton:focus {
+    outline:0;
+}
+
 #instructionButton {
     background-color: rgb(233, 255, 233);
     color: darkgreen;
@@ -31,6 +42,7 @@ body {
     border-width: 2px;
     text-align: center;
     vertical-align: middle;
+    
 }
 
 #winLose {
