--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,27 @@
+html {
+    height: 100%;
+}
+
 body {
     background-image: url("../images/minecraft_office_background_by_goldenfurryofficial-d8hk3k7.png");
     background-repeat: no-repeat;
     background-color: black;
+    background-size: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 #title {
-    background-color: rgb(9, 149, 243);
-    color: rgb(228, 244, 250);
-    opacity: .8;
+    background-color: deepskyblue;
+    color: aliceblue;
+    opacity: 0.8;
+}
+
+h1 {
+    background-color: deepskyblue;
+    color: aliceblue;
+    opacity: 1;
+    font-weight: bold;
 }
 
 #instructions {
@@ -46,114 +60,119 @@ body {
 }
 
 #winLose {
-    background-color: darkkhaki;
-    color: darkolivegreen;
+    background-color: rgb(168, 122, 70);
+    color: rgb(77, 57, 31);
     font-weight: bold;
     opacity: .8;
+    text-align: center;
 }
 
-#losses {
-    padding-left: 10px;
-    opacity: .8;
+#lossTotal {
+    text-align: center;
+    font-size: 22px;
+    opacity: 1;
+    line-height: 22px;
 }
 
-#wins {
-    height: 50px;
-    padding-left: 10px;
-    opacity: .8;
+#winTotal {
+    text-align: center;
+    margin: 15px 0px 20px 0px;
+    font-size: 22px;
+    opacity: 1;
+    line-height: 22px;
 }
 #rGn {
-    background-color: darkolivegreen;
-    color: darkkhaki;
+    background-color: rgb(77, 57, 31);
+    color: rgb(168, 122, 70);
     text-align: center;
     font-weight: bold;
     opacity: .8;
-    padding-top: 30px;
+}
+
+#orderedWeight {
+    font-size: 40px;
+    opacity: 1;
+    margin: 0px 0px 0px 0px;
+    line-height: 40px;
+}
+
+#orderedWeightText {
+    font-size: 20px;
+    opacity: 1;
+    margin: 10px 0px 0px 0px;
 }
 
 #playerTotalText {
-    background-color: deepskyblue;
-    color: aliceblue;
+    background-color: rgb(255, 123, 0);
+    color: rgb(238, 255, 0);
     text-align: center;
     font-weight: bold;
     opacity: .8;
 }
 
 #playerTotalNum {
-    background-color: deepskyblue;
-    color: aliceblue;
+    background-color: rgb(255, 123, 0);
+    color: rgb(238, 255, 0);
     text-align: center;
     font-weight: bold;
     opacity: .8;
 }
 
-#crystalImages {
-    text-align: left;
+#playerWeight {
+    font-size: 40px;
+    background-color: rgb(255, 123, 0);
+    color: rgb(238, 255, 0);
+    text-align: center;
+    font-weight: bold;
+    margin: 0px 0px 0px 0px;
+    line-height: 40px;
+    opacity: 1;
 }
 
-.crystal {
-    margin: 0px 20px 0px 20px;
-}
-
-@media screen and (max-width: 1000px) {
-    /* body {
-        background-image: url("../images/backgroundRotate.png");
-        background-repeat: no-repeat;
-        background-color: black;
-    } */
-
-    #crystalImages {
-        text-align: center;
-    }
-
-    .crystal {
-        margin: 20px 30px 20px 30px;
-    }
-
-    row {
-        display:block;
-    }
-}
-
-@media screen and (max-width: 900px) {
-    body {
-        background-image: url("../images/minecraft_office_background_by_goldenfurryofficial-d8hk3k7.png");
-        background-repeat: no-repeat;
-        background-color: black;
-    }
-
-    #crystalImages {
-        text-align: center;
-    }
-
-    .crystal {
-        margin: 20px 20px 20px 20px;
-    }
-
-    row {
-        display:block;
-    }
-}
-
-@media screen and (max-width: 814px) {
-body {
-    background-image: url("../images/minecraft_office_background_by_goldenfurryofficial-d8hk3k7.png");
-    background-repeat: no-repeat;
-    background-color: black;
+#playerWeightText {
+    margin: 10px 0px 0px 0px;
+    font-size: 20px;
+    opacity: 1;
 }
 
 #crystalImages {
     text-align: center;
+    margin: 40px 0px 0px 0px;
 }
 
 .crystal {
-    margin: 20px 5px 20px 5px;
+    margin: 0px 20px 40px 20px;
 }
 
-row {
-    display:block;
+@media screen and (max-width: 1000px) {
+    body {
+        background-image: url("../images/backgroundRotate.png");
+        background-repeat: no-repeat;
+        background-color: black;
+    } 
+
+    
+
+    
 }
-};
+
+@media screen and (max-width: 900px) {
+    body {
+        background-image: url("../images/backgroundRotate.png");
+        background-repeat: no-repeat;
+        background-color: black;
+    }
+
+
+}
+
+@media screen and (max-width: 814px) {
+body {
+    background-image: url("../images/backgroundRotate.png");
+    background-repeat: no-repeat;
+    background-color: black;;
+}
+}
 
 @media screen and (max-width: 690px) {
     body {
@@ -161,54 +180,62 @@ row {
         background-repeat: no-repeat;
         background-color: black;
     }
-    
-    #crystalImages {
-        display: block;
-        text-align: center;
-        margin: 0px 0px 0px 0px;
-    }
-    
-    .crystal {
-        margin: 0px 5px 0px 5px;
-        height: 100px;
-    }
-
-    row {
-        display:block;
-        margin: 300px 0px 0px 0px;
-    }
     }
 
 @media screen and (max-width: 600px) {
 
-    html {
-        max-width: 100%;
-    }
-
     body {
         background-image: url("../images/backgroundRotate.png");
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-color: black;
-     
-    }
-
-    #crystalImages {
-        display: block;
-        text-align: center;
-        margin: 60px 0px 0px 0px;
+    
     }
 
     .crystal {
         margin: 20px 5px 20px 5px;
         height: 125px;
+    
     }
 
-    row {
-        display:block;
-        margin: 300px 0px 0px 0px;
+    #crystalImages {
+        text-align: center;
+        margin: 0px 0px 0px 0px;
     }
-}
+    
+    }
 
-@media screen and (max-width: 580px) {
+    @media screen and (max-width: 580px) {
 
-}
+        body {
+            background-image: url("../images/backgroundRotate.png");
+            background-repeat: repeat;
+            background-color: black;
+        
+        }
+    
+        .crystal {
+            margin: 20px 5px 20px 5px;
+            height: 125px;
+        
+        }
+
+        #playerWeightText {
+            margin: 10px 0px 0px 0px;
+        }
+
+        #orderedWeightText {
+            margin: 10px 0px 0px 0px;
+        }
+
+        #orderedWeight {
+            
+            margin: 0px 0px 15px 0px;
+            
+        }
+
+        #playerWeight {
+            
+            margin: 0px 0px 15px 0px;
+            
+        }
+    }
