--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,15 +144,61 @@ h1 {
     margin: 0px 20px 40px 20px;
 }
 
-@media screen and (max-width: 1000px) {
+#animate {
+    text-align: right;
+}
+
+#animateText {
+    text-align: left;
+    background-color: rgba(255, 255, 255, 0);
+    color: whitesmoke;
+    font-weight: bold;
+    font-size:90px;
+}
+
+@media screen and (max-width: 1900px) {
+    #animateText {
+        font-size:80px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    #animateText {
+        font-size:70px;
+    }
+}
+
+@media screen and (max-width: 1275px) {
+#animateText {
+    font-size:60px;
+    }
+}
+
+@media screen and (max-width: 1075px) {
     body {
         background-image: url("../images/backgroundRotate.png");
         background-repeat: no-repeat;
         background-color: black;
     } 
 
-    
+    #col9 {
+        vertical-align: middle;
+    }
 
+    #animateText {
+        
+        font-size:50px;
+        margin: 0px 0px 0px 0px;
+        line-height: 90px;
+        }
+
+    #anTextPosition {
+        
+        font-size:50px;
+        margin: 0px 0px 0px 0px;
+        line-height: 90px;
+
+    }
     
 }
 
@@ -163,17 +209,61 @@ h1 {
         background-color: black;
     }
 
+    #animateText {
+        font-size:45px;
+        vertical-align: middle;
+        line-height: 47px;
+        }
 
 }
 
-@media screen and (max-width: 814px) {
+@media screen and (max-width: 875px) {
 body {
     background-image: url("../images/backgroundRotate.png");
     background-repeat: no-repeat;
     background-color: black;;
 }
+
+#col9 {
+    vertical-align: middle;
 }
 
+#animateText {
+    
+    font-size:40px;
+    margin: 0px 0px 0px 0px;
+    line-height: 90px;
+    }
+
+#anTextPosition {
+    
+    font-size:40px;
+    margin: 0px 0px 0px 0px;
+    line-height: 90px;
+
+}
+
+}
+
+@media screen and (max-width: 715px) {
+
+    #animateText {
+    
+        font-size:30px;
+        margin: 0px 0px 0px 0px;
+        line-height: 90px;
+        }
+    
+    #anTextPosition {
+        
+        font-size:30px;
+        margin: 0px 0px 0px 0px;
+        line-height: 90px;
+    
+    }
+
+
+}
 @media screen and (max-width: 690px) {
     body {
         background-image: url("../images/backgroundRotate.png");
